tests/ui/issues/issue-8767.stderr
error[E0412]: cannot find type `B` in this scope
  --> $DIR/issue-8767.rs:1:6
   |
LL | impl B {
   |      ^ not found in this scope

error: aborting due to previous error

For more information about this error, try `rustc --explain E0412`.
