tests/ui/issues/issue-8767.rs
impl B { //~ ERROR cannot find type `B` in this scope
}

fn main() {
}
